--- a/MyMvcProject/Views/Home/Index.cshtml
+++ b/MyMvcProject/Views/Home/Index.cshtml
@@ -6,15 +6,15 @@
 }
 
 
-<div class="d-flex flex-row">
+<div class="d-flex align-content-start flex-wrap">
     @foreach (var item in Model)
     {
-        <div class="card mx-auto" style="width: 18rem;">
+        <div class="card m-2" style="width: 18rem;">
             <img class="card-img-top" src="/Uploads/@item.ImageFileName" alt="Big party">
             <div class="card-body">
                 <h5 class="card-title">@item.Name</h5>
                 <p class="card-text">@item.Description</p>
-                @if(User.Identity.IsAuthenticated == false)
+                @if (User.Identity.IsAuthenticated == false)
                 {
                     <button type="button" class="btn btn-secondary btn-lg" disabled>You must login to join</button>
                 }
